--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,12 @@ cache:
   - "$HOME/.gradle/wrapper/"
 android:
   components:
-    - build-tools-28.0.3
-    - android-28
+    - build-tools-29.0.3
+    - android-29
 before_install:
-- chmod +x gradlew
+  - yes | sdkmanager "platforms;android-29"
+  - yes | sdkmanager "build-tools;29.0.2"
+  - chmod +x gradlew
 script:
 - "./gradlew clean build"
 - "./gradlew test"
