--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - yes | sdkmanager "build-tools;29.0.2"
   - chmod +x gradlew
 script:
-- "./gradlew clean build"
+- "./gradlew clean ktlint assembleRelease"
 - "./gradlew test"
 deploy:
   provider: script
